# Rag_assignment

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
src/: agent.py  backend.py  demo.ipynb  nodes.py  process_embeddings.py  state.py  streamlit_app.py  tools.py  ui.py
tests/: test.py
